addes another css file refference

--- a/sam.html
+++ b/sam.html
@@ -2,6 +2,7 @@
 <head>
 	<title>today page</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<div class="container">
